Densify features declared sparsely.
Densify features declared sparsely in the new declaration language
and add interpolation and validation for feature authorities.

Refs #113677